--- a/about-us.html
+++ b/about-us.html
@@ -274,17 +274,24 @@
                 <div class="kingster-top-bar-container kingster-container ">
                     <div class="kingster-top-bar-container-inner clearfix">
                         <div class="kingster-top-bar-left kingster-item-pdlr"><i class="fa fa-envelope-open-o"
-                                id="i_983a_0"></i> contact@KUTheme.edu <i class="fa fa-phone" id="i_983a_1"></i>
-                            +1-3435-2356-222</div>
+                                style="font-size: 15px ;color: white ;margin-right: 8px ;"></i> Info@raffles-me.com <i
+                                class="fa fa-phone"
+                                style="font-size: 15px ;color: white ;margin-left: 18px ;margin-right: 6px ;"></i>
+                                +966 11 281 5126</div>
                         <div class="kingster-top-bar-right kingster-item-pdlr">
                             <ul id="kingster-top-bar-menu"
                                 class="sf-menu kingster-top-bar-menu kingster-top-bar-right-menu">
-                                <li class="menu-item kingster-normal-menu"><a href="#">Alumni</a></li>
-                                <li class="menu-item kingster-normal-menu"><a href="#">Calendar</a></li>
-                                <li class="menu-item kingster-normal-menu"><a href="#">Portal</a></li>
+                                <li class="menu-item kingster-normal-menu"><a href="#">Life In Riyadh</a></li>
+                                <li class="menu-item kingster-normal-menu"><a href="#">Collaboration</a></li>
+                                <!-- <li class="menu-item kingster-normal-menu"><a href="#">Portal</a></li> -->
                             </ul>
                             <div class="kingster-top-bar-right-social"></div><a class="kingster-top-bar-right-button"
-                                href="#" target="_blank">Support KU</a>
+                                href="#" target="_blank">Gallery</a>
+                            <ul id="kingster-top-bar-menu"
+                                class="sf-menu kingster-top-bar-menu kingster-top-bar-right-menu">
+                                <li class="menu-item kingster-normal-menu"><a href="homepage-ar.html"><img
+                                            src="img/sa-flag.png" width="35" alt=""></a></li>
+                            </ul>
                         </div>
                     </div>
                 </div>
@@ -295,27 +302,28 @@
                 <div class="kingster-header-background"></div>
                 <div class="kingster-header-container  kingster-container">
                     <div class="kingster-header-container-inner clearfix">
-                        <div class="kingster-logo  kingster-item-pdlr">
+                        <div class="kingster-logo  kingster-item-pdlr pbtm">
                             <div class="kingster-logo-inner">
-                                <a class="" href="home.html"><img src="images/logo.png" alt="" /></a>
+                                <a class="" href="index.html"><img class="headerlogo" src="img/raffles-logo.png"
+                                        alt="" /></a>
                             </div>
                         </div>
                         <div class="kingster-navigation kingster-item-pdlr clearfix ">
                             <div class="kingster-main-menu" id="kingster-main-menu">
                                 <ul id="menu-main-navigation-1" class="sf-menu">
-                                    <li class="menu-item menu-item-home menu-item-has-children kingster-normal-menu"><a
-                                            href="home.html" class="sf-with-ul-pre">Home</a>
-                                        <ul class="sub-menu">
+                                    <li
+                                        class="menu-item menu-item-home current-menu-item kingster-normal-menu">
+                                        <a href="index.html" class="sf-with-ul-pre">Home</a>
+                                        <!-- <ul class="sub-menu">
                                             <li class="menu-item menu-item-home" data-size="60"><a
                                                     href="home.html">Homepage 1</a></li>
-                                            <li class="menu-item" data-size="60"><a href="index.html">Homepage 2</a>
-                                            </li>
-                                        </ul>
+                                            <li class="menu-item" data-size="60"><a href="index.html">Homepage
+                                                    2</a></li>
+                                        </ul> -->
                                     </li>
-                                    <li
-                                        class="menu-item  current-menu-item  menu-item-has-children kingster-normal-menu">
-                                        <a href="#" class="sf-with-ul-pre">Pages</a>
-                                        <ul class="sub-menu">
+                                    <li class="menu-item kingster-normal-menu"><a href="about-us.html"
+                                            class="sf-with-ul-pre">About Us</a>
+                                        <!-- <ul class="sub-menu">
                                             <li class="menu-item" data-size="60"><a href="about-us.html">About KU</a>
                                             </li>
                                             <li class="menu-item menu-item-has-children" data-size="60"><a
@@ -461,12 +469,14 @@
                                             <li class="menu-item" data-size="60"><a href="coming-soon.html">Coming
                                                     Soon</a></li>
                                             <li class="menu-item" data-size="60"><a href="404.html">404 Page</a></li>
-                                        </ul>
+                                        </ul> -->
+                                    </li>
+                                    <li class="menu-item kingster-normal-menu"><a href="#"
+                                        class="sf-with-ul-pre">Services</a>
                                     </li>
                                     <li class="menu-item menu-item-has-children kingster-mega-menu"><a
-                                            href="bachelor-of-science-in-business-administration.html"
-                                            class="sf-with-ul-pre">Academics</a>
-                                        <div class="sf-mega sf-mega-full megaimg">
+                                            href="programmes.html" class="sf-with-ul-pre">Programmes</a>
+                                        <!-- <div class="sf-mega sf-mega-full megaimg">
                                             <ul class="sub-menu">
                                                 <li class="menu-item menu-item-has-children" data-size="15"><a
                                                         class="sf-with-ul-pre">Undergraduate</a>
@@ -513,16 +523,17 @@
                                                 </li>
                                                 <li class="menu-item" data-size="15">
                                                     <div class="kingster-mega-menu-section-content"><img
-                                                            src="upload/mega-menu-logo.png" id="img_983a_0" alt="" />
-                                                        <span id="span_983a_0">Academic offerings include 95 majors, 86
-                                                            minors, and more than 100 in-major specializations</span>
-                                                    </div>
+                                                            src="upload/mega-menu-logo.png" style="margin-bottom: 13px;"
+                                                            alt="" /> <span
+                                                            style="font-size: 14px; font-weight: 500;">Academic
+                                                            offerings include 95 majors, 86 minors, and more than 100
+                                                            in-major specializations</span></div>
                                                 </li>
                                             </ul>
-                                        </div>
+                                        </div> -->
                                     </li>
-                                    <li class="menu-item menu-item-has-children kingster-normal-menu"><a
-                                            href="apply-to-kingster.html" class="sf-with-ul-pre">Admissions</a>
+                                    <!-- <li class="menu-item menu-item-has-children kingster-normal-menu"><a
+                                            href="apply-to-kingster.html" class="sf-with-ul-pre">Gallery</a>
                                         <ul class="sub-menu">
                                             <li class="menu-item" data-size="60"><a href="apply-to-kingster.html">Apply
                                                     To Kingster</a></li>
@@ -538,8 +549,8 @@
                                             <li class="menu-item" data-size="60"><a href="event-calendar.html">Event
                                                     Calendar</a></li>
                                         </ul>
-                                    </li>
-                                    <li class="menu-item menu-item-has-children kingster-normal-menu"><a href="#"
+                                    </li> -->
+                                    <!-- <li class="menu-item menu-item-has-children kingster-normal-menu"><a href="#"
                                             class="sf-with-ul-pre">Courses</a>
                                         <ul class="sub-menu">
                                             <li class="menu-item" data-size="60"><a href="course-list-1.html">Course
@@ -547,15 +558,17 @@
                                             <li class="menu-item" data-size="60"><a href="course-list-2.html">Course
                                                     List 2</a></li>
                                         </ul>
+                                    </li> -->
+                                    <li class="menu-item kingster-normal-menu"><a href="#">Scholarships</a>
                                     </li>
-                                    <li class="menu-item kingster-normal-menu"><a href="athletics.html">Athletics</a>
-                                    </li>
-                                    <li class="menu-item kingster-normal-menu"><a href="university-life.html">University
-                                            Life</a></li>
+                                    <li class="menu-item kingster-normal-menu"><a href="#">Admission
+                                        </a></li>
+                                    <li class="menu-item kingster-normal-menu"><a href="contact.html">Contact Us
+                                        </a></li>
                                 </ul>
                                 <div class="kingster-navigation-slide-bar" id="kingster-navigation-slide-bar"></div>
                             </div>
-                            <div class="kingster-main-menu-right-wrap clearfix ">
+                            <!-- <div class="kingster-main-menu-right-wrap clearfix ">
                                 <div class="kingster-main-menu-search" id="kingster-top-search"><i
                                         class="icon_search"></i></div>
                                 <div class="kingster-top-search-wrap">
@@ -573,7 +586,7 @@
                                         </div>
                                     </div>
                                 </div>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                 </div>
@@ -632,7 +645,7 @@
                                                         <div class="tp-mask-wrap"
                                                             style="position: absolute; display: block; overflow: visible;">
                                                             <div class="tp-caption tp-shape tp-shapewrapper  tp-resizeme"
-                                                                id="slide-6-layer-8" data-x="537" data-y="center"
+                                                                id="slide-6-layer-8" data-x="637" data-y="center"
                                                                 data-voffset="-10" data-width="['754']"
                                                                 data-height="['121']" data-type="shape"
                                                                 data-responsive_offset="on"
@@ -642,7 +655,7 @@
                                                                 data-paddingright="[0,0,0,0]"
                                                                 data-paddingbottom="[0,0,0,0]"
                                                                 data-paddingleft="[0,0,0,0]"
-                                                                style="z-index: 6; background-color: rgb(235, 130, 35); visibility: inherit; transition: none 0s ease 0s; text-align: inherit; line-height: 27px; border-width: 0px; margin: 0px; padding: 0px; letter-spacing: 0px; font-weight: 400; font-size: 16px; white-space: nowrap; min-height: 121px; min-width: 754px; max-height: 121px; max-width: 754px; opacity: 1; transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform-origin: 50% 50% 0px;">
+                                                                style="z-index: 6; background-color: rgb(235, 130, 35); visibility: inherit; transition: none 0s ease 0s; text-align: inherit; line-height: 27px; border-width: 0px; margin: 0px; padding: 0px; letter-spacing: 0px; font-weight: 400; font-size: 16px; white-space: nowrap; min-height: 80px; min-width: 404px; max-height: 121px; max-width: 754px; opacity: 1; transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform-origin: 50% 50% 0px;">
                                                             </div>
                                                         </div>
                                                     </div>
@@ -672,7 +685,7 @@
                                                                 data-paddingright="[0,0,0,0]"
                                                                 data-paddingbottom="[0,0,0,0]"
                                                                 data-paddingleft="[0,0,0,0]"
-                                                                style="z-index: 8; white-space: nowrap; font-size: 50px; line-height: 80px; font-weight: 500; color: rgb(255, 255, 255); letter-spacing: 0px; font-family: Poppins;visibility: inherit; transition: none 0s ease 0s; text-align: inherit; border-width: 0px; margin: 0px; padding: 0px; min-height: 0px; min-width: 0px; max-height: none; max-width: none; opacity: 1; transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform-origin: 50% 50% 0px;">
+                                                                style="z-index: 8; white-space: nowrap; font-size: 50px; line-height: 50px; font-weight: 500; color: rgb(255, 255, 255); letter-spacing: 0px; font-family: Poppins;visibility: inherit; transition: none 0s ease 0s; text-align: inherit; border-width: 0px; margin: 0px; padding: 0px; min-height: 0px; min-width: 0px; max-height: none; max-width: none; opacity: 1; transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform-origin: 50% 50% 0px;">
                                                                 About Us</div>
                                                         </div>
                                                     </div>
