--- a/index.html
+++ b/index.html
@@ -1102,7 +1102,7 @@
                         <div class="gdlr-core-pbf-wrapper-content gdlr-core-js ">
                             <div class="gdlr-core-pbf-wrapper-container clearfix gdlr-core-container">
                                 <div class="gdlr-core-pbf-column gdlr-core-column-20 gdlr-core-column-first"
-                                    style="padding-top: 6%;">
+                                    style="padding-top: 6%;width: 32%;float: left;">
                                     <div class="gdlr-core-pbf-column-content-margin gdlr-core-js ">
                                         <div class="gdlr-core-pbf-column-content clearfix gdlr-core-js ">
                                             <div class="gdlr-core-pbf-element">
@@ -1128,7 +1128,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="gdlr-core-pbf-column gdlr-core-column-40">
+                                <div class="gdlr-core-pbf-column gdlr-core-column-40" style="float: right;">
                                     <div class="gdlr-core-pbf-column-content-margin gdlr-core-js ">
                                         <div class="gdlr-core-pbf-column-content clearfix gdlr-core-js ">
                                             <div class="gdlr-core-pbf-element">
@@ -1337,7 +1337,7 @@
                         </div>
                         <div class="gdlr-core-pbf-wrapper-content gdlr-core-js ">
                             <div class="gdlr-core-pbf-wrapper-container clearfix gdlr-core-container">
-                                <div class="gdlr-core-pbf-column gdlr-core-column-20 gdlr-core-column-first">
+                                <div class="gdlr-core-pbf-column gdlr-core-column-20 gdlr-core-column-first" >
                                     <div class="gdlr-core-pbf-column-content-margin gdlr-core-js ">
                                         <div class="gdlr-core-pbf-column-content clearfix gdlr-core-js ">
                                             <div class="gdlr-core-pbf-element">
@@ -1346,30 +1346,30 @@
                                                     <div class="gdlr-core-column-service-media gdlr-core-media-image"
                                                         style="margin-bottom: 35px;"><img src="upload/col-icon-1.png"
                                                             alt="" width="41" height="41" title="col-icon-1" /></div>
-                                                    <div class="gdlr-core-column-service-content-wrapper">
-                                                        <div class="gdlr-core-column-service-title-wrap">
-                                                            <h3 class="gdlr-core-column-service-title gdlr-core-skin-title"
-                                                                style="font-size: 22px ;font-weight: 600 ;text-transform: none ;">
-                                                                A Vibrant Campus</h3>
-                                                        </div>
-                                                        <div class="gdlr-core-column-service-content"
-                                                            style="font-size: 17px ;text-transform: none ;color: white;font-weight: 300;">
-                                                            <p class="p-width">The campus of the Raffles Institute
-                                                                islocated on Al-Orouba Street on
-                                                                the corner ofAl-Amir Turki Bin
-                                                                Abdulaziz Al Awal Road.</p> <a
-                                                                class="gdlr-core-column-service-read-more gdlr-core-info-font"
-                                                                href="#"
-                                                                style="font-style: normal ;margin-top: 0px ;color: white;">Learn
-                                                                More</a>
-                                                        </div>
-                                                    </div>
+                                                            <div class="gdlr-core-column-service-content-wrapper">
+                                                                <div class="gdlr-core-column-service-title-wrap">
+                                                                    <h3 class="gdlr-core-column-service-title gdlr-core-skin-title"
+                                                                        style="font-size: 22px ;font-weight: 600 ;text-transform: none ;">
+                                                                        A Vibrant Campus</h3>
+                                                                </div>
+                                                                <div class="gdlr-core-column-service-content"
+                                                                    style="font-size: 17px ;text-transform: none ;color: white;font-weight: 300;">
+                                                                    <p class="p-width">The campus of the Raffles Institute
+                                                                        islocated on Al-Orouba Street on
+                                                                        the corner ofAl-Amir Turki Bin
+                                                                        Abdulaziz Al Awal Road.</p> <a
+                                                                        class="gdlr-core-column-service-read-more gdlr-core-info-font"
+                                                                        href="#"
+                                                                        style="font-style: normal ;margin-top: 0px ;color: white;">Learn
+                                                                        More</a>
+                                                                </div>
+                                                            </div>
                                                 </div>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
-                                <div class="gdlr-core-pbf-column gdlr-core-column-20">
+                                <div class="gdlr-core-pbf-column gdlr-core-column-20" >
                                     <div class="gdlr-core-pbf-column-content-margin gdlr-core-js ">
                                         <div class="gdlr-core-pbf-column-content clearfix gdlr-core-js ">
                                             <div class="gdlr-core-pbf-element">
@@ -1402,7 +1402,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="gdlr-core-pbf-column gdlr-core-column-20">
+                                <div class="gdlr-core-pbf-column gdlr-core-column-20" >
                                     <div class="gdlr-core-pbf-column-content-margin gdlr-core-js ">
                                         <div class="gdlr-core-pbf-column-content clearfix gdlr-core-js ">
                                             <div class="gdlr-core-pbf-element">
@@ -1913,15 +1913,13 @@
                                     <div class="vl">
                                     </div>
                                     <div class="position">
-                                        <h3 class="gdlr-core-title-item-title gdlr-core-skin-title h3mob"
-                                            style="font-size: 40px ;font-weight: 300 ;letter-spacing: 3px ;text-transform: none ;color: #EB8223 ;margin-bottom: 0px;margin-left: 39%;">
+                                        <h3 class="gdlr-core-title-item-title gdlr-core-skin-title h3mob" style="font-size: 40px;font-weight: 300;letter-spacing: 3px;text-transform: none;color: #EB8223;margin-bottom: 0px;margin-left: 37%;">
                                             Explore our Activities</h3>
-                                        <h3 class="gdlr-core-title-item-title gdlr-core-skin-title h3mob"
-                                            style="font-size: 40px ;font-weight: 600 ;letter-spacing: 1.5px ;text-transform: none ;color: #EB8223 ;margin-left: 39%;">
+                                        <h3 class="gdlr-core-title-item-title gdlr-core-skin-title h3mob" style="font-size: 40px;font-weight: 600;letter-spacing: 1.5px;text-transform: none;color: #EB8223;margin-left: 37%;">
                                             THROUGH INSTAGRAM</h3>
                                     </div>
                                 </div>
-                                <div class="gallery js-flickity" data-flickity-options='{ "wrapAround": true }'>
+                                <div class="gallery js-flickity igdiv" data-flickity-options='{ "wrapAround": true }'>
                                     <div class="gallery-cell"></div>
                                     <div class="gallery-cell"></div>
                                     <div class="gallery-cell"></div>
@@ -1941,6 +1939,21 @@
                 </a>
             </div>
 
+            <section class="subscription-block">
+                <div>
+                    <div class="subscribe-box">
+                        <div class="inner wow fadeIn">
+                            <h2>GET IN TOUCH WITH US NOW<br>
+                                TO SEE HOW WE CAN HELP!
+                            </h2>
+                            <form id="contact" name="contact" action="" method="post">
+                                <input type="email" name="email" id="email" required="" placeholder="Type your e-mail address">
+                                <input type="submit" id="submit" name="submit" value="SUBMIT">
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </section>
 
             <footer>
                 <div class="kingster-footer-wrapper ">
@@ -1948,73 +1961,41 @@
                         <div class="kingster-footer-column kingster-item-pdlr kingster-column-15">
                             <div id="text-2" class="widget widget_text kingster-widget">
                                 <div class="textwidget">
-                                    <p><img src="img/raffles-logo2.png" alt="" />
-                                        <br /> <span class="gdlr-core-space-shortcode" style="margin-top: 5px ;"></span>
-
-
-
-                                        <br /> Office No.25, Home Offices,
-                                        <br /> Turki Bin Abdulaziz st 11454
-                                        <br /> Riyadh, Saaudi Arabia
-                                    </p>
-                                    <!-- <p>
-                                        <span style="font-size: 15px; color: #ffffff;">+966 11 281 5126</span><br>
-                                        <span style="font-size: 15px; color: #ffffff;">+996 55 299 5509</span>
-                                        <br /> <span class="gdlr-core-space-shortcode"
-                                            style="margin-top: -20px ;"></span>
-                                        <br />
-                                        <a style="font-size: 15px; color: #ffffff;"
-                                            href="mailto:admin@kingsteruni.edu">info@raffles-me.com</a><br>
-                                        <a style="font-size: 15px; color: #ffffff;"
-                                            href="mailto:admin@kingsteruni.edu">Career@raffles-me.com</a>
-                                    </p> -->
-                                    <div
-                                        class="gdlr-core-divider-item gdlr-core-divider-item-normal gdlr-core-left-align">
-                                        <div class="gdlr-core-divider-line gdlr-core-skin-divider"
-                                            style="border-color: #EB8223 ;border-bottom-width: 2px ;"></div>
-                                    </div>
+                                    <p><img src="img/raffles-logo3-01.png" alt=""></p>
                                 </div>
                             </div>
                         </div>
                         <div class="kingster-footer-column kingster-item-pdlr kingster-column-15">
-                            <div id="gdlr-core-custom-menu-widget-2"
-                                class="widget widget_gdlr-core-custom-menu-widget kingster-widget">
-                                <h3 class="kingster-widget-title">Our Campus</h3><span class="clear"></span>
-                                <div class="menu-our-campus-container">
-                                    <ul id="menu-our-campus"
-                                        class="gdlr-core-custom-menu-widget gdlr-core-menu-style-plain">
-                                        <li class="menu-item"><a href="#">Acedemic</a></li>
-                                        <li class="menu-item"><a href="#">Planning &#038; Administration</a></li>
-                                        <li class="menu-item"><a href="#">Campus Safety</a></li>
-                                        <li class="menu-item"><a href="#">Office of the Chancellor</a></li>
-                                        <li class="menu-item"><a href="#">Facility Services</a></li>
-                                        <li class="menu-item"><a href="#">Human Resources</a></li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="kingster-footer-column kingster-item-pdlr kingster-column-15">
-                            <div id="gdlr-core-custom-menu-widget-4"
-                                class="widget widget_gdlr-core-custom-menu-widget kingster-widget">
+                            <div id="gdlr-core-custom-menu-widget-2" class="widget widget_gdlr-core-custom-menu-widget kingster-widget">
                                 <h3 class="kingster-widget-title">Email</h3><span class="clear"></span>
-                                <div class="menu-academics-container">
-                                    <ul id="menu-academics"
-                                        class="gdlr-core-custom-menu-widget gdlr-core-menu-style-plain">
-                                        <li class="menu-item">Info@raffles-me.com</li>
-                                        <li class="menu-item">Career@raffles-me.com</li>
+                                <div class="menu-our-campus-container">
+                                    <ul id="menu-our-campus" class="gdlr-core-custom-menu-widget gdlr-core-menu-style-plain bullet-points">
+                                        <li class="menu-item"><a href="#">Info@raffles-me.com</a></li>
+                                        <li class="menu-item"><a href="#">Career@raffles-me.com</a></li>
                                     </ul>
                                 </div>
                             </div>
                         </div>
                         <div class="kingster-footer-column kingster-item-pdlr kingster-column-15">
-                            <div id="gdlr-core-custom-menu-widget-3"
-                                class="widget widget_gdlr-core-custom-menu-widget kingster-widget">
-                                <h3 class="kingster-widget-title">Phone</h3><span class="clear"></span>
+                            <div id="gdlr-core-custom-menu-widget-3" class="widget widget_gdlr-core-custom-menu-widget kingster-widget">
+                                <h3 class="kingster-widget-title">Our Numbers</h3><span class="clear"></span>
                                 <div class="menu-campus-life-container">
-                                    <ul id="menu-campus-life"
-                                        class="gdlr-core-custom-menu-widget gdlr-core-menu-style-plain">
-                                        <li class="menu-item">+966 11 281 5126</li>
-                                        <li class="menu-item">+996 55 299 5509</li>
+                                    <ul id="menu-campus-life" class="gdlr-core-custom-menu-widget gdlr-core-menu-style-plain bullet-points">
+                                        <li class="menu-item"><a href="#">+966 55 011 1719</a></li>
+                                        <li class="menu-item"><a href="#">+966 55 299 5509</a></li>
+
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="kingster-footer-column kingster-item-pdlr kingster-column-15">
+                            <div id="gdlr-core-custom-menu-widget-4" class="widget widget_gdlr-core-custom-menu-widget kingster-widget">
+                                <h3 class="kingster-widget-title">Find Us At</h3><span class="clear"></span>
+                                <div class="menu-academics-container">
+                                    <ul id="menu-academics" class="gdlr-core-custom-menu-widget gdlr-core-menu-style-plain bullet-points">
+                                        <li class="menu-item"><a href="#">Office No.25, Home Offices,
+                                                Turki Bin Abdulaziz st 11454
+                                                Riyadh, Saaudi Arabia</a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -2024,11 +2005,10 @@
 
                 <div class="kingster-copyright-wrapper">
                     <div class="kingster-copyright-container kingster-container clearfix">
-                        <div class="kingster-copyright-left kingster-item-pdlr">Copyright All Right Reserved 2023,
-                            Raffles University</div>
+                        <div class="kingster-copyright-left kingster-item-pdlr">© 2023 Raffles Design Institue. All
+                            Rights Reserved To <a href="khpmarketingagency.com">KHP Marketing Agency</a></div>
                         <div class="kingster-copyright-right kingster-item-pdlr">
-                            <div class="gdlr-core-social-network-item gdlr-core-item-pdb  gdlr-core-none-align"
-                                style="padding-bottom: 0px ;">
+                            <div class="gdlr-core-social-network-item gdlr-core-item-pdb  gdlr-core-none-align" style="padding-bottom: 0px ;">
                                 <a href="#" target="_blank" class="gdlr-core-social-network-icon" title="facebook">
                                     <i class="fa fa-facebook"></i>
                                 </a>
