--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
                                                     2</a></li>
                                         </ul> -->
                                     </li>
-                                    <li class="menu-item kingster-normal-menu"><a href="about-us.html"
+                                    <li class="menu-item kingster-normal-menu"><a href="#"
                                             class="sf-with-ul-pre">About Us</a>
                                         <!-- <ul class="sub-menu">
                                             <li class="menu-item" data-size="60"><a href="about-us.html">About KU</a>
@@ -698,7 +698,7 @@
                                                             Be apart of our history</div> -->
                                                         <div class="tp-caption tp-shape tp-shapewrapper  tp-resizeme"
                                                             id="slide-6-layer-8" data-x="537" data-y="center"
-                                                            data-voffset="-10" data-width="['754']"
+                                                            data-voffset="-10" data-width="['500']"
                                                             data-height="['121']" data-type="shape"
                                                             data-responsive_offset="on"
                                                             data-frames='[{"delay":350,"speed":300,"frame":"0","from":"opacity:0;","to":"o:1;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","to":"opacity:0;","ease":"Power3.easeInOut"}]'
@@ -724,7 +724,7 @@
                                                             data-textAlign="['inherit','inherit','inherit','inherit']"
                                                             data-paddingtop="[0,0,0,0]" data-paddingright="[0,0,0,0]"
                                                             data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]"
-                                                            style="z-index: 8; white-space: nowrap; font-size: 80px; line-height: 80px; font-weight: 300; color: #ffffff; letter-spacing: 0px;font-family:Poppins;text-transform: uppercase;">
+                                                            style="z-index: 8; white-space: nowrap; font-size: 50px; line-height: 80px; font-weight: 300; color: #ffffff; letter-spacing: 0px;font-family:Poppins;text-transform: uppercase;">
                                                             Who we are</div>
                                                         <div class="tp-caption   tp-resizeme" id="slide-6-layer-9"
                                                             data-x="538" data-y="400" data-voffset="129"
@@ -906,7 +906,7 @@
                                                     style="padding-bottom: 0px;">
                                                     <div class="gdlr-core-column-service-media gdlr-core-media-image"
                                                         style="margin-bottom: 20px;"><img
-                                                            src="upload/hp2-col-1-icon.png" alt="" width="40"
+                                                            src="img/icon 1-01.png" alt="" width="40"
                                                             height="40" title="hp2-col-1-icon" /></div>
                                                     <div class="gdlr-core-column-service-content-wrapper">
                                                         <div class="gdlr-core-column-service-title-wrap">
@@ -940,7 +940,7 @@
                                                     style="padding-bottom: 0px;">
                                                     <div class="gdlr-core-column-service-media gdlr-core-media-image"
                                                         style="margin-bottom: 20px;"><img
-                                                            src="upload/hp2-col-4-icon.png" alt="" width="41"
+                                                            src="img/icon 2-02.png" alt="" width="41"
                                                             height="41" title="hp2-col-4-icon" /></div>
                                                     <div class="gdlr-core-column-service-content-wrapper">
                                                         <div class="gdlr-core-column-service-title-wrap">
@@ -975,7 +975,7 @@
                                                     style="padding-bottom: 0px;">
                                                     <div class="gdlr-core-column-service-media gdlr-core-media-image"
                                                         style="margin-bottom: 20px;"><img
-                                                            src="upload/hp2-col-2-icon.png" alt="" width="49"
+                                                            src="img/icon 5-05.png" alt="" width="49"
                                                             height="45" title="hp2-col-2-icon" /></div>
                                                     <div class="gdlr-core-column-service-content-wrapper">
                                                         <div class="gdlr-core-column-service-title-wrap">
@@ -1009,7 +1009,7 @@
                                                     style="padding-bottom: 0px;">
                                                     <div class="gdlr-core-column-service-media gdlr-core-media-image"
                                                         style="margin-bottom: 20px;"><img
-                                                            src="upload/hp2-col-3-icon.png" alt="" width="50"
+                                                            src="img/icon 4-04.png" alt="" width="50"
                                                             height="44" title="hp2-col-3-icon" /></div>
                                                     <div class="gdlr-core-column-service-content-wrapper">
                                                         <div class="gdlr-core-column-service-title-wrap">
@@ -1043,7 +1043,7 @@
                                                     style="padding-bottom: 0px;">
                                                     <div class="gdlr-core-column-service-media gdlr-core-media-image"
                                                         style="margin-bottom: 20px;"><img
-                                                            src="upload/hp2-col-2-icon.png" alt="" width="49"
+                                                            src="img/icon 5-05.png" alt="" width="49"
                                                             height="45" title="hp2-col-2-icon" /></div>
                                                     <div class="gdlr-core-column-service-content-wrapper">
                                                         <div class="gdlr-core-column-service-title-wrap">
@@ -1076,7 +1076,7 @@
                                                     style="padding-bottom: 0px;">
                                                     <div class="gdlr-core-column-service-media gdlr-core-media-image"
                                                         style="margin-bottom: 20px;"><img
-                                                            src="upload/hp2-col-4-icon.png" alt="" width="41"
+                                                            src="img/icon 6-06.png" alt="" width="41"
                                                             height="41" title="hp2-col-4-icon" /></div>
                                                     <div class="gdlr-core-column-service-content-wrapper">
                                                         <div class="gdlr-core-column-service-title-wrap">
@@ -1265,12 +1265,12 @@
                         </div>
                         <div class="gdlr-core-pbf-wrapper-content gdlr-core-js ">
                             <div class="gdlr-core-pbf-wrapper-container clearfix gdlr-core-pbf-wrapper-full-no-space">
-                                <div class="gdlr-core-pbf-column gdlr-core-column-30 gdlr-core-column-first">
+                                <div class="gdlr-core-pbf-column gdlr-core-column-30 gdlr-core-column-first" style="width: 38%;">
                                     <div class="gdlr-core-pbf-column-content-margin gdlr-core-js "
                                         style="min-height: 575px ;" data-sync-height="height-half">
                                         <div class="gdlr-core-pbf-background-wrap">
                                             <div class="gdlr-core-pbf-background gdlr-core-parallax gdlr-core-js"
-                                                style="background-image: url(img/B34A0388.jpg) ;background-size: cover ;background-position: center ;"
+                                                style="background-image: url(img/posts\ \(1\).png) ;background-size: cover ;background-position: center ;"
                                                 data-parallax-speed="0"></div>
                                         </div>
                                         <div
@@ -1278,7 +1278,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="gdlr-core-pbf-column gdlr-core-column-30">
+                                <div class="gdlr-core-pbf-column gdlr-core-column-30"style="width: 62%;">
                                     <div class="gdlr-core-pbf-column-content-margin gdlr-core-js "
                                         style="padding: 80px 120px 55px 90px;" data-sync-height="height-half"
                                         data-sync-height-center>
@@ -1330,8 +1330,8 @@
                     </div>
                     <div class="gdlr-core-pbf-wrapper " style="padding: 90px 0px 55px 0px;" data-skin="Column White">
                         <div class="gdlr-core-pbf-background-wrap"
-                            style="background-image:url(img/B34A0438.jpg) ;background-repeat: no-repeat;background-size: cover;">
-                            <div class="overlay2"></div>
+                            style="background-image:url(img/9-01.png) ;background-repeat: no-repeat;background-size: cover;">
+                            <!-- <div class="overlay2"></div> -->
                         </div>
                         <div class="gdlr-core-pbf-wrapper-content gdlr-core-js ">
                             <div class="gdlr-core-pbf-wrapper-container clearfix gdlr-core-container">
@@ -1342,7 +1342,7 @@
                                                 <div class="gdlr-core-column-service-item gdlr-core-item-pdb  gdlr-core-left-align gdlr-core-column-service-icon-top gdlr-core-no-caption gdlr-core-item-pdlr"
                                                     style="padding-bottom: 30px;">
                                                     <div class="gdlr-core-column-service-media gdlr-core-media-image"
-                                                        style="margin-bottom: 35px;"><img src="upload/col-icon-1.png"
+                                                        style="margin-bottom: 35px;"><img src="img/icon 7-07.png"
                                                             alt="" width="41" height="41" title="col-icon-1" /></div>
                                                             <div class="gdlr-core-column-service-content-wrapper">
                                                                 <div class="gdlr-core-column-service-title-wrap">
@@ -1374,7 +1374,7 @@
                                                 <div class="gdlr-core-column-service-item gdlr-core-item-pdb  gdlr-core-left-align gdlr-core-column-service-icon-top gdlr-core-no-caption gdlr-core-item-pdlr"
                                                     style="padding-bottom: 30px;">
                                                     <div class="gdlr-core-column-service-media gdlr-core-media-image"
-                                                        style="margin-bottom: 31px;"><img src="upload/col-icon-2.png"
+                                                        style="margin-bottom: 31px;"><img src="img/icon 8-08.png"
                                                             alt="" width="43" height="45" title="col-icon-2" /></div>
                                                     <div class="gdlr-core-column-service-content-wrapper">
                                                         <div class="gdlr-core-column-service-title-wrap">
@@ -1407,7 +1407,7 @@
                                                 <div class="gdlr-core-column-service-item gdlr-core-item-pdb  gdlr-core-left-align gdlr-core-column-service-icon-top gdlr-core-no-caption gdlr-core-item-pdlr"
                                                     style="padding-bottom: 30px;">
                                                     <div class="gdlr-core-column-service-media gdlr-core-media-image"
-                                                        style="margin-bottom: 33px;"><img src="upload/col-icon-3.png"
+                                                        style="margin-bottom: 33px;"><img src="img/icon 9-09.png"
                                                             alt="" width="40" height="43" title="col-icon-3" /></div>
                                                     <div class="gdlr-core-column-service-content-wrapper">
                                                         <div class="gdlr-core-column-service-title-wrap">
@@ -1847,54 +1847,30 @@
                                 style="max-width: 1440px ;">
                                 <div class="gdlr-core-pbf-element">
                                     <h3 class="gdlr-core-title-item-title gdlr-core-skin-title h3mob"
-                                        style="font-size: 40px ;font-weight: 500 ;letter-spacing: 0px ;text-transform: none ;color: #ffffff ;text-align: center;">
+                                        style="font-size: 35px ;font-weight: 500 ;letter-spacing: 0px ;text-transform: none ;color: #ffffff ;text-align: center;">
                                         Our success partners</h3>
                                     <section class="customer-logos slider">
-                                        <div class="slide"><img src="https://mydio.in/assets/logo/dio.svg">
+                                        <div class="slide"><img src="img/logos-01.png">
                                         </div>
-
-                                        <div class="slide"><img src="https://mydio.in/assets/logo/dio.svg">
+                                        <div class="slide"><img src="img/logos-02.png">
                                         </div>
-
-                                        <div class="slide"><img src="https://mydio.in/assets/logo/dio.svg">
+                                        <div class="slide"><img src="img/logos-03.png">
                                         </div>
-
-                                        <div class="slide"><img src="https://mydio.in/assets/logo/dio.svg">
+                                        <div class="slide"><img src="img/logos-04.png">
                                         </div>
-
-                                        <div class="slide"><img src="https://mydio.in/assets/logo/dio.svg">
+                                        <div class="slide"><img src="img/logos-05.png">
                                         </div>
-
-                                        <div class="slide"><img src="https://mydio.in/assets/logo/dio.svg">
+                                        <div class="slide"><img src="img/logos-06.png">
                                         </div>
-
-                                        <div class="slide"><img src="https://mydio.in/assets/logo/dio.svg">
+                                        <div class="slide"><img src="img/logos-07.png">
                                         </div>
-
-                                        <div class="slide"><img src="https://mydio.in/assets/logo/dio.svg">
+                                        <div class="slide"><img src="img/logos-08.png">
                                         </div>
-                                        <div class="slide"><img src="https://mydio.in/assets/logo/dio.svg">
+                                        <div class="slide"><img src="img/logos-09.png">
                                         </div>
-
-                                        <div class="slide"><img src="https://mydio.in/assets/logo/dio.svg">
+                                        <div class="slide"><img src="img/logos-10.png">
                                         </div>
-
-                                        <div class="slide"><img src="https://mydio.in/assets/logo/dio.svg">
-                                        </div>
-
-                                        <div class="slide"><img src="https://mydio.in/assets/logo/dio.svg">
-                                        </div>
-
-                                        <div class="slide"><img src="https://mydio.in/assets/logo/dio.svg">
-                                        </div>
-
-                                        <div class="slide"><img src="https://mydio.in/assets/logo/dio.svg">
-                                        </div>
-
-                                        <div class="slide"><img src="https://mydio.in/assets/logo/dio.svg">
-                                        </div>
-
-                                        <div class="slide"><img src="https://mydio.in/assets/logo/dio.svg">
+                                        <div class="slide"><img src="img/logos-11.png">
                                         </div>
                                     </section>
 
@@ -1918,15 +1894,18 @@
                                     </div>
                                 </div>
                                 <div class="gallery js-flickity igdiv" data-flickity-options='{ "wrapAround": true }'>
-                                    <div class="gallery-cell"></div>
-                                    <div class="gallery-cell"></div>
-                                    <div class="gallery-cell"></div>
-                                    <div class="gallery-cell"></div>
-                                    <div class="gallery-cell"></div>
+                                    <div class="gallery-cell" style="background-image: url(img/posts\ \(4\).png);background-size: cover;background-repeat: no-repeat;"></div>
+                                    <div class="gallery-cell" style="background-image: url(img/posts\ \(2\).png);background-size: cover;background-repeat: no-repeat;"></div>
+                                    <div class="gallery-cell" style="background-image: url(img/posts\ \(3\).png);background-size: cover;background-repeat: no-repeat;"></div>
                                 </div>
                             </div>
                         </div>
                     </div>
+                    <div class="gdlr-core-pbf-wrapper " style="padding: 30px 0px 0px 0px;">
+                        <div class="gdlr-core-pbf-background-wrap"></div>
+                        <img src="img/MAP-01.png" style="width: 100%;" alt="">
+                    </div>
+
                 </div>
             </div>
 
